# evolutionary_controller_ros

./: .gitignore  LICENSE  README.md  package.xml  setup.cfg  setup.py
config/: ga_params.yaml  neat_config.ini  redis.env.example  workers.yaml.example
docs/: timing_report_20260425.md
evolutionary_controller_ros/avaliacao/: episodio.py  orquestrador.py  reset_mundo.py
evolutionary_controller_ros/controladores/: controlador_nn.py  controlador_reativo.py
evolutionary_controller_ros/controllers/: gp_controller.py  nn_controller.py  reactive_controller.py
evolutionary_controller_ros/evaluation/: coordinator.py  episode.py  orchestrator.py  redis_coordinator.py  redis_worker.py  timing.py  worker_server.py  world_reset.py
evolutionary_controller_ros/evolucao/: algoritmo.py  fitness.py  genoma.py  populacao.py
evolutionary_controller_ros/evolution/: algorithm.py  fitness.py  genome.py  population.py
evolutionary_controller_ros/utils/: flag_detection.py  logger.py  sensores.py  sensors.py
genomes/: best.json
launch/: demo_best.launch.py  demo_melhor.launch.py  mission.launch.py  rodar_controlador.launch.py  run_controller.launch.py  train.launch.py  train_all.launch.py  treinar.launch.py
patches/: prm_2026_cartola_led.patch
scripts/: bootstrap_worker.sh  plot_fitness.py  plotar_fitness.py  smoke_pipeline.py
test/: test_algorithm.py  test_coordinator.py  test_fitness.py  test_flag_detection.py  test_genome.py  test_population.py  test_redis_coordinator.py  test_sensors.py
